# Cosmoscope

./: .gitignore  .gitmodules  Brushes.cpp  Brushes.h  CMakeLists.txt  CallbackExamples.h  CallbackFuncs.cpp  CallbackFuncs.h  ColorFunc.cpp  ColorFunc.h  CoorSystem.cpp  CoorSystem.h  CosmosDrawer.cpp  CosmosDrawer.h  CosmosToSDL.cpp  CosmosToSDL.h  Cosmoscope.sln  Cosmoscope.vcxproj  Cosmoscope.vcxproj.filters  Doxyfile  FuncTree.cpp  FuncTree.h  Main.cpp  README.md  RelativeFunc.cpp  RelativeFunc.h  Style.cpp  Style.h  Time.cpp  Time.h  cosmoscopeOrganization.odg  vcpkg.json
Documentation/html/: _callback_funcs_8h_source.html  _coor_system_8h.html  _coor_system_8h_source.html  _func_tree_8h_source.html  _relative_func_8h_source.html  _style_8h_source.html  annotated.html  files.html  (+24 more)
apps/: CMakeLists.txt  Main.cpp  main.cpp
dependencies/: CMakeLists.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
glman/: CMakeLists.txt
glshaders/: fragmentshader.fs  vertexshader.vs
hello/: CMakeLists.txt
include/: Brushes.h  CSC_CallbackFuncs.h  CSC_CallbackTools.h  CSC_CoorSystem.h  CSC_CosmicCallback.h  CSC_CosmicMachine.h  CSC_CosmicObject.h  CSC_CosmicShader.h  CSC_CosmosDrawer.h  CSC_CosmosDrawerSDL.h  CSC_CosmosMachine.h  CSC_CosmosWindowSDL.cpp  CSC_CosmosWindowSDL.h  CSC_Cosmovertor.h  CSC_CosmovertorSDL.h  CSC_FuncTree.h  CSC_RelativeFunc.h  CSC_Scheduler.h  CSC_SnapQueue.h  CSC_SnapQueueSDL.h  CSC_Style.h  CSC_StyleSDL.h  CallbackExamples.h  CosmosDrawer.h  CosmosToSDL.h  FloatPixels.h  WindowManager.h  WindowManagerGL.h  WindowManagerSDL.h
lib/: CMakeLists.txt
lib/include/: Brushes.h  CSC_CallbackFuncs.h  CSC_CallbackTools.h  CSC_CoorSystemSDL.h  CSC_CosmicMachine.h  CSC_CosmosDrawerSDL.h  CSC_CosmosWindowGL.h  CSC_CosmovertorSDL.h  CSC_FuncTree.h  CSC_Scheduler.h  CSC_SnapQueueSDL.h  CSC_Time.h  CallbackExamples.h
lib/src/: CSC_CosmosWindowSDL.cpp  CSC_SnapQueueSDL.cpp  CSC_StyleSDL.cpp  CSC_Time.cpp  WIndowManagerGL.cpp  WindowManagerSDL.cpp
src/: Brushes.cpp  CSC_CallbackFuncs.cpp  CSC_CallbackTools.cpp  CSC_CoorSystem.cpp  CSC_CosmicMachine.cpp  CSC_CosmicShader.cpp  CSC_CosmosDrawer.cpp  CSC_CosmosDrawerSDL.cpp  CSC_CosmosWindowGL.cpp  CSC_CosmosWindowSDL.cpp  CSC_Cosmovertor.cpp  CSC_CosmovertorSDL.cpp  CSC_FuncTree.cpp  CSC_RelativeFunc.cpp  CSC_Scheduler.cpp  CSC_SnapQueue.cpp  CSC_SnapQueueSDL.cpp  CSC_Style.cpp  CSC_StyleSDL.cpp  CosmicShader.cpp  CosmosDrawer.cpp  CosmosToSDL.cpp  Main.cpp  WindowManager.cpp  WindowManagerSDL.cpp
util26/: CMakeLists.txt
(+21 files in other folders)
